--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,13 @@ Authors@R:
 Description: The REMIND integration of IIASA's `climate-assessment` provides a standardized interface to simple climate models such as MAGICC7.
 License: LGPL-3
 URL: https://github.com/pik-piam/remindClimateAssessment
+Imports:
+    quitte,
+    tidyverse,
+    readr,
+    dplyr,
+    stringr,
+    piamInterfaces
 Suggests:
     testthat
 Encoding: UTF-8
