--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,26 @@
 Type: Package
 Package: remindClimateAssessment
 Title: REMIND integration of IIASA's `climate-assessment` package
-Version: 0.0.2
-Date: 2024-04-02
+Version: 0.0.2.9001
+Date: 2025-03-26
 Authors@R:
     person("Tonn", "Rüter", , "tonn.rueter@pik-potsdam.de", role = c("aut", "cre"))
 Description: The REMIND integration of IIASA's `climate-assessment` provides a standardized interface to simple climate models such as MAGICC7.
 License: LGPL-3
 URL: https://github.com/pik-piam/remindClimateAssessment
 Imports:
-    quitte,
-    tidyverse,
-    readr,
     dplyr,
-    stringr,
-    piamInterfaces,
     gdxrrw,
+    lucode2,
+    magrittr,
+    piamInterfaces,
+    purrr,
+    quitte,
+    rlang,
+    stringr,
+    tidyr,
     yaml
 Suggests:
     testthat
 Encoding: UTF-8
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
