--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(magrittr,"%>%")
 importFrom(piamInterfaces,generateIIASASubmission)
 importFrom(quitte,as.quitte)
 importFrom(quitte,interpolate_missing_periods)
+importFrom(quitte,is.quitte)
 importFrom(rlang,.data)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_wider)
