Intro'd post-processing function
- `appendClimateAssessmentToMif` appends to existing REMIND_generic_*.mif
- `cleanUpClimateAssessment` filters periods, interpolates missing periods, renames variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ importFrom(piamInterfaces,generateIIASASubmission)
 importFrom(quitte,as.quitte)
 importFrom(quitte,interpolate_missing_periods)
 importFrom(quitte,is.quitte)
+importFrom(quitte,write.mif)
+importFrom(readr,write_lines)
 importFrom(rlang,.data)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_wider)
