--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: remindClimateAssessment
 Title: REMIND integration of IIASA's `climate-assessment` package
-Version: 0.0.4
+Version: 0.0.5
 Date: 2025-03-27
 Authors@R:
     person("Tonn", "Rüter", , "tonn.rueter@pik-potsdam.de", role = c("aut", "cre"))
@@ -16,6 +16,7 @@ Imports:
     piamInterfaces,
     purrr,
     quitte,
+    readr,
     rlang,
     stringr,
     tidyr,
