Just `bind_rows` on list-of-lists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(renameVariableRemindToMagicc7)
 export(reportClimateAssessmentConfig)
 export(runTimeReport)
 importFrom(dplyr,all_of)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename_with)
