--- a/inst/default.yaml
+++ b/inst/default.yaml
@@ -1,4 +1,5 @@
 # TODO: Here be description of the file structure and the process to add variabels to the config 
+# TODO: Also name REMIND variables here? Association is a bit unclear, since MAGICC7 variables are named quite different
 - magicc7Variable: Surface Air Temperature Change
   gamsVariable: pm_globalMeanTemperature
   fileName: p15_magicc_temp
