--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: remindClimateAssessment
 Title: REMIND integration of IIASA's `climate-assessment` package
 Version: 0.0.5
-Date: 2025-03-28
+Date: 2025-03-31
 Authors@R:
     person("Tonn", "Rüter", , "tonn.rueter@pik-potsdam.de", role = c("aut", "cre"))
 Description: The REMIND integration of IIASA's `climate-assessment` provides a standardized interface to simple climate models such as MAGICC7.
@@ -20,6 +20,7 @@ Imports:
     rlang,
     stringr,
     tidyr,
+    withr,
     yaml
 Suggests:
     testthat
