--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,4 +28,6 @@ importFrom(readr,write_lines)
 importFrom(rlang,.data)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,tar)
+importFrom(withr,with_dir)
 importFrom(yaml,read_yaml)
