--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,16 @@ export(climateAssessmentConfig)
 export(dumpToGDX)
 export(dumpToGdx)
 export(emissionDataForClimateAssessment)
+export(emissionImpulseSenarios)
 export(exportConfFromYaml)
 export(renameVariableMagicc7ToRemind)
 export(renameVariableRemindToMagicc7)
 export(reportClimateAssessmentConfig)
 export(runTimeReport)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename_with)
@@ -21,6 +24,7 @@ importFrom(dplyr,select)
 importFrom(gdxrrw,wgdx.lst)
 importFrom(magrittr,"%>%")
 importFrom(piamInterfaces,generateIIASASubmission)
+importFrom(quitte,as.IAMCTimeseries)
 importFrom(quitte,as.quitte)
 importFrom(quitte,interpolate_missing_periods)
 importFrom(quitte,is.quitte)
