--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,10 @@ importFrom(dplyr,select)
 importFrom(gdxrrw,wgdx.lst)
 importFrom(magrittr,"%>%")
 importFrom(piamInterfaces,generateIIASASubmission)
-importFrom(quitte,as.IAMCTimeseries)
 importFrom(quitte,as.quitte)
 importFrom(quitte,interpolate_missing_periods)
 importFrom(quitte,is.quitte)
+importFrom(quitte,pivot_periods_wider)
 importFrom(quitte,write.mif)
 importFrom(readr,write_lines)
 importFrom(rlang,.data)
